--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -14,7 +14,7 @@ RUN apt update && DEBIAN_FRONTEND=noninteractive apt install -y \
     build-essential automake autopoint bison gettext git gperf libtool-bin pkg-config \
     python3 python-is-python3 python3-xcbgen wget xutils-dev ca-certificates tzdata \
     libgl1-mesa-dev mesa-common-dev libglib2.0-dev libpng-dev libpthread-stubs0-dev \
-    libsodium-dev libudev-dev libusb-1.0-0-dev libssl-dev \
+    libsodium-dev libudev-dev libusb-1.0-0-dev libssl-dev libxcb-aux-dev \
     xcb-proto libx11-dev libxext-dev libx11-xcb-dev libxau-dev libxdmcp-dev \
     libxcb1-dev libxcb-glx0-dev libxcb-util-dev libxcb-image0-dev libxcb-keysyms1-dev \
     libxcb-render-util0-dev libxcb-icccm4-dev libxcb-ewmh-dev libxcb-xinerama0-dev \
