--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -193,7 +193,7 @@ if(UNIX AND NOT APPLE AND NOT ANDROID)
     message(STATUS "X11_INCLUDE_DIR = ${X11_INCLUDE_DIR}")
     message(STATUS "X11_LIBRARIES = ${X11_LIBRARIES}")
     include_directories(${X11_INCLUDE_DIR})
-    # link_directories(${X11_LIBRARIES})
+    link_directories(${X11_LIBRARIES})
     if(STATIC)
         find_library(XCB_LIBRARY xcb)
         message(STATUS "Found xcb library: ${XCB_LIBRARY}")
