--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -392,6 +392,9 @@ if(STATIC)
   if(UNIX AND NOT APPLE)
     pkg_check_modules(X11XCB_XCBGLX REQUIRED x11-xcb xcb-glx)
     list(APPEND QT5_LIBRARIES ${X11XCB_XCBGLX_LIBRARIES})
+    pkg_check_modules(XCB_IMAGE REQUIRED xcb-image)
+    pkg_check_modules(XCB_AUX   REQUIRED xcb-aux)
+    list(APPEND QT5_LIBRARIES ${XCB_IMAGE_LIBRARIES} ${XCB_AUX_LIBRARIES})
     pkg_check_modules(FONTCONFIG REQUIRED fontconfig)
     list(APPEND QT5_LIBRARIES ${FONTCONFIG_STATIC_LIBRARIES})
   endif()
